--- a/shell.vcxproj
+++ b/shell.vcxproj
@@ -144,12 +144,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CLI.cpp" />
+    <ClCompile Include="events.cpp" />
     <ClCompile Include="fifo.cpp" />
     <ClCompile Include="SerialPort.cpp" />
     <ClCompile Include="shell.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CLI.h" />
+    <ClInclude Include="events.h" />
     <ClInclude Include="fifo.h" />
     <ClInclude Include="SerialPort.h" />
   </ItemGroup>
